--- a/css/feedbackpopup.css
+++ b/css/feedbackpopup.css
@@ -8,6 +8,9 @@ html,body{
 	padding:0;margin:0;
 }
 
+#FeedbackPage fieldset{
+	padding: 20px;
+}
 #FeedbackPage form ul.optionset li{
 	display:block;
 	float:left;
@@ -72,4 +75,6 @@ html,body{
 #FeedbackPage form .Actions{
 	text-align:right;
 	padding:3px;
+	margin-right: 20px;
+	padding-bottom: 10px;
 }
